welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: value !== is not a member of Int
	if (a!==b && b!==c && a!==c) {
             ^greenTicket:8: error: type mismatch;
 found   : Unit
 required: Int
	if (a==b || a==c || b==c) {
        ^